Added 3 new cars.

--- a/CarStore/Views/CarModel/Details.cshtml
+++ b/CarStore/Views/CarModel/Details.cshtml
@@ -397,25 +397,30 @@
         <div class="div-text">
             Start price from $11 460
             <br />
-
+            Renault LOGAN is a really attractive car!
+            Renault LOGAN is the embodiment of our new visual concept.
+            It boasts the qualities that characterize Renault Design.
+            Its updated interior and sleek, elegant lines appeal to the whole family!
         </div>
 
         <br>
-        <img class="img-renault-wide" src="~/App_Images/renault-logan-view-1.jpg" alt="koleos view" />
+        <img class="img-renault-wide" src="~/App_Images/renault-logan-view-1.jpg" alt="logan view" />
 
         <hr />
         <div>
             <h2>Interior design</h2>
-            <img class="img-renault" src="~/App_Images/renault-logan-inside-1.jpg" alt="koleos inside 1" />
+            <img class="img-renault" src="~/App_Images/renault-logan-inside-1.jpg" alt="logan inside 1" />
             <hr />
 
             <div class="div-text">
-
+                With Renault LOGAN you can see that there is not too much space!
+                Take advantage of the comfort, roomy storage compartments and equipment.
+                All this has been specifically designed for your comfortable lounge.
 
             </div>
 
             <hr />
-            <img class="img-renault" src="~/App_Images/renault-logan-inside-2.jpg" alt="koleos inside 2" />
+            <img class="img-renault" src="~/App_Images/renault-logan-inside-2.jpg" alt="logan inside 2" />
         </div>
 
         <hr />
@@ -581,14 +586,14 @@
 
     @if (Model.Id == 10)
     {
-<div class="div-text">
-    Start price from $71 320
-    <br />
-    Expressive design, cutting-edge technology and the arts to meet the highest demands -
-    the new Audi Q8 combines all the key features of the brand.
-    Its sporty exterior is clearly associated with the design of the first quattro,
-    and the new octagonal grille Singleframe clearly indicates the future.
-</div>
+        <div class="div-text">
+            Start price from $71 320
+            <br />
+            Expressive design, cutting-edge technology and the arts to meet the highest demands -
+            the new Audi Q8 combines all the key features of the brand.
+            Its sporty exterior is clearly associated with the design of the first quattro,
+            and the new octagonal grille Singleframe clearly indicates the future.
+        </div>
 
         <br />
         <img class="img-audi-wide" src="~/App_Images/audi-Q-8-view-1.jpg" alt="Q8-view-1" />
@@ -596,7 +601,7 @@
         <div>
             <hr />
             <div class="div-text">
-                
+
                 The interior of the four-door SUV is reminiscent of a seating area: it is spacious,
                 luxurious and offers extensive communication facilities.
                 A variety of intelligent systems, ranging from MMI touch response to voice control,
@@ -614,11 +619,11 @@
             <h2>Interior design</h2>
 
             <div class="div-text">
-                Sit down and enjoy. 
-                Thanks to its width of two meters, 
-                the Audi Q8 in the role of the SUV provides an extraordinary sense of space. 
-                Restrained, noble design, custom contour seats with massage and ventilation features, 
-                a four-zone automatic air conditioning system and an air quality package emphasize 
+                Sit down and enjoy.
+                Thanks to its width of two meters,
+                the Audi Q8 in the role of the SUV provides an extraordinary sense of space.
+                Restrained, noble design, custom contour seats with massage and ventilation features,
+                a four-zone automatic air conditioning system and an air quality package emphasize
                 the sophistication of the interior atmosphere.
 
             </div>
@@ -651,16 +656,16 @@
 
     @if (Model.Id == 11)
     {
-<div class="div-text">
-    Start price from $47 010
-    <br />
-    Don't rely on the case.
-    No matter whether it is comfort, style or dynamics, 
-    the new Audi Q5 will immediately convince you. His appearance is so expressive, 
-    his engine is so powerful, his technology is so new. 
-    And so many of its possibilities.
-    Every day is a new one with the new Audi Q5.
-</div>
+        <div class="div-text">
+            Start price from $47 010
+            <br />
+            Don't rely on the case.
+            No matter whether it is comfort, style or dynamics,
+            the new Audi Q5 will immediately convince you. His appearance is so expressive,
+            his engine is so powerful, his technology is so new.
+            And so many of its possibilities.
+            Every day is a new one with the new Audi Q5.
+        </div>
 
         <br />
         <img class="img-audi-wide" src="~/App_Images/audi-Q-5-view-1.jpg" alt="Q5-view-1" />
@@ -668,9 +673,9 @@
         <div>
             <hr />
             <div class="div-text">
-                Every detail of the Audi Q5 is created in a distinctive Q-design 
-                and embodies dynamics and independence. For example, 
-                a clear hood or a flat inclined roof line, 
+                Every detail of the Audi Q5 is created in a distinctive Q-design
+                and embodies dynamics and independence. For example,
+                a clear hood or a flat inclined roof line,
                 located on the side line of the rearview mirror and a narrow glass line.
 
             </div>
@@ -685,7 +690,7 @@
             <div class="div-text">
                 The interior of the new Audi Q5 is driver-oriented and,
                 thanks to its increased wheelbase, offers more space and individuality.
-                You can choose from many details, from high-quality materials such as optional 
+                You can choose from many details, from high-quality materials such as optional
                 Nappa leather in striking colors to lightening elements. In the dark,
                 the optional interior illumination accentuates with 30 different individually selected colors.
                 Even the decorative overlays on the dashboard are highlighted.
@@ -715,4 +720,195 @@
         </div>
     }
 
-</body>        
+    @*//////////////
+        RENAULT LOGAN MVC
+        //////////////*@
+
+    @if (Model.Id == 12)
+    {
+        <div class="div-text">
+            Start price from $11 760
+            <br />
+            Renault Logan MCV is an affordable, practical,
+            comfortable and reliable car that you can count on in any condition!
+        </div>
+
+        <br>
+        <img class="img-renault-wide" src="~/App_Images/renault-loganmvc-view-1.jpg" alt="loganmvc view" />
+
+        <hr />
+        <div>
+            <h2>Interior design</h2>
+            <img class="img-renault-wide" src="~/App_Images/renault-loganmvc-inside-1.jpg" alt="loganmvc inside 1" />
+            <hr />
+
+            <div class="div-text">
+                ADJUST A SPACE INSIDE
+                <br>
+                The back seat can be folded in 1/3 and 2/3 format to increase cargo space to 1518 liters.
+                <br>
+                OPTIMIZE YOUR FIT
+                <br>
+                - Comfortable and ergonomic driver's seat. You can easily adjust the height of the steering wheel and seat to improve landing. *
+                <br>
+                - The steering wheel is equipped with a built-in sound signal.
+                <br>
+                * Depending on version.
+            </div>
+
+            <hr />
+            <img class="img-renault" src="~/App_Images/renault-loganmvc-inside-2.jpg" alt="loganmvc inside 2" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/40">
+                <img class="renault-config-img" src="~/App_Images/renault-loganmvc-cfg-base.jpg" alt="loganmvc-configs-base-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/41">
+                <img class="renault-config-img" src="~/App_Images/renault-loganmvc-cfg-zen.jpg" alt="logan-configs-zen-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/42">
+                <img class="renault-config-img" src="~/App_Images/renault-loganmvc-cfg-stepwat-zen.jpg" alt="logan-configs-stepway-zen-img" />
+            </a>
+        </div>
+        <hr />
+    }
+
+    @*AUDI Q3*@
+    @*/////////////*@
+    @if (Model.Id == 13)
+    {
+        <div class="div-text">
+            Start price from $31 900
+            <br />
+            The new Audi Q3 is a family SUV with many versatile talents.
+            The second-generation model looks more confident, and the large space,
+            increased versatility and numerous convenient details guarantee maximum practical value.
+            The design of the manly front of the new Audi Q3 attracts the attention of the octagonal Singleframe
+            grille and large side air intakes.
+        </div>
+
+        <br />
+        <img class="img-audi-wide" src="~/App_Images/audi-Q-3-view-1.jpg" alt="Q3-view-1" />
+
+        <div>
+            <hr />
+            <div class="div-text">
+                The concept of space promises sufficient capacity:
+                depending on the position of the back seat and the backrests, the luggage space can be up to 675 liters,
+                and with folded backrests this figure increases to 1525 liters. In addition,
+                the compact SUV features numerous multimedia solutions such as the Digital Cockpit dashboard and the
+                large-screen MMI touch multimedia system. Intelligent driver assistance systems provide support in
+                city conditions, on long journeys and parking, and increase the overall comfort level of the new Audi Q3.
+            </div>
+            <br>
+            <img class="img-audi" src="~/App_Images/audi-Q-3-view-2.jpg" alt="Q3-view-2" />
+        </div>
+
+        <div>
+            <hr />
+            <h2>Interior design</h2>
+
+            <div class="div-text">
+                The family SUV has a fully digital concept of control and display:
+                as standard, the car is equipped with a digital instrument panel with
+                a diagonal screen of 10.25 inches, which is controlled by multifunction steering wheel.
+                In conjunction with MMI's top-of-the-line media navigation system plus,
+                the equipment includes an additional 10.1-inch touchscreen and a natural-language
+                voice recognition system for enhanced control comfort.
+            </div>
+            <br />
+            <img class="img-audi" src="~/App_Images/audi-Q-3-inside-1.jpeg" alt="Q3-inside-1" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/43">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-3-cfg-base.png" alt="Q3-configs-base-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/44">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-3-cfg-comfort.png" alt="Q3-configs-comfort-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/45">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-3-cfg-premium.png" alt="Q3-configs-premium-img" />
+            </a>
+            <hr />
+        </div>
+    }
+
+    @*AUDI Q2*@
+    @*/////////////*@
+    @if (Model.Id == 14)
+    {
+<div class="div-text">
+    Start price from $28 800
+    <br />
+    Meet: New Audi Q2 on stage.
+    The completely new geometry of the design clearly demonstrates the distinctive character,
+    which is hidden behind clearly defined lines and expressive faces. At the heart of the car's 
+    showy self-confidence are its extraordinary capabilities thanks to the powerful TFSI 
+    and TDI units with an output of 150 to 190 hp. and quattro all-wheel drive (optional).
+    
+</div>
+
+        <br />
+        <img class="img-audi-wide" src="~/App_Images/audi-Q-2-view-1.jpg" alt="Q2-view-1" />
+
+        <div>
+            <hr />
+            <div class="div-text">
+                Thanks to equipment previously available only for older models, your desire will not be fulfilled.
+                The car has exemplary communication capabilities. At your disposal is
+                an interface for the integration of smartphones and a range of latest multimedia and speakers.
+            </div>
+            <br>
+            <img class="img-audi" src="~/App_Images/audi-Q-2-view-2.jpg" alt="Q2-view-2" />
+        </div>
+
+        <div>
+            <hr />
+            <h2>Interior design</h2>
+
+            <div class="div-text">
+                The car interior is surprisingly practical.
+                An optional boot with a power tailgate and a three-section rear
+                seatback make it possible to choose from numerous interior configurations. 
+                Thanks to a wide choice of spectacular colors of a seat upholstery and
+                stylish decorative inserts the interior can be decorated to your liking.
+            </div>
+            <br />
+            <img class="img-audi" src="~/App_Images/audi-Q-2-inside-1.jpeg" alt="Q2-inside-1" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/46">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-2-cfg-base.png" alt="Q2-configs-base-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/47">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-2-cfg-comfort.png" alt="Q2-configs-comfort-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/48">
+                <img class="audi-config-img" src="~/App_Images/audi-Q-2-cfg-premium.png" alt="Q2-configs-premium-img" />
+            </a>
+            <hr />
+        </div>
+    }
+
+</body>    
