--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -35,50 +35,65 @@
                         <a href="/PurchaseBuild/CarModelChoose/@item.Id">@item.Name</a>
                     </td>
                     <td class="td-model">
-                        @if (item.Id == 1)
-                        {
-                            <img class="renault-small-icon" src="~/App_Images/renault-megane-small-icon.jpg" alt="Megane-small-icon" />
-                        }
-                        @if (item.Id == 2)
-                        {
-                            <img class="renault-small-icon" src="~/App_Images/renault-duster-small-icon.jpg" alt="Duster-small-icon" />
-                        }
-                        @if (item.Id == 3)
-                        {
-                            <img class="audi-small-icon" src="~/App_Images/audi-A-7-small-icon.png" alt="A7-small-icon" />
-                        }
-                        @if (item.Id == 4)
-                        {
-                            <img class="audi-small-icon" src="~/App_Images/audi-Q-7-small-icon.png" alt="Q7-small-icon" />
-                        }
-                        @if (item.Id == 5)
-                        {
-                            <img class="renault-small-icon" src="~/App_Images/renault-kadjar-small-icon.jpg" alt="kadjar-small-icon" />
-                        }
-                        @if (item.Id == 6)
-                        {
-                            <img class="renault-small-icon" src="~/App_Images/renault-koleos-small-icon.jpg" alt="koleos-small-icon" />
-                        }
-                        @if (item.Id == 7)
-                        {
-                            <img class="renault-small-icon" src="~/App_Images/renault-logan-small-icon.jpg" alt="logan-small-icon" />
-                        }
-                        @if (item.Id == 8)
-                        {
-                            <img class="audi-small-icon" src="~/App_Images/audi-A-8-small-icon.png" alt="A8-small-icon" />
-                        }
-                        @if (item.Id == 9)
-                        {
-                            <img class="audi-small-icon" src="~/App_Images/audi-A-6-small-icon.png" alt="A6-small-icon" />
-                        }
-                        @if (item.Id == 10)
-                        {
-                            <img class="audi-small-icon" src="~/App_Images/audi-Q-8-small-icon.png" alt="Q8-small-icon" />
-                        }
-                        @if (item.Id == 11)
-                        {
-                            <img class="audi-small-icon" src="~/App_Images/audi-Q-5-small-icon.png" alt="Q5-small-icon" />
-                        }
+                        <a href="/PurchaseBuild/CarModelChoose/@item.Id">
+
+                            @if (item.Id == 1)
+                            {
+                                <img class="renault-small-icon" src="~/App_Images/renault-megane-small-icon.jpg" alt="Megane-small-icon" />
+                            }
+                            @if (item.Id == 2)
+                            {
+                                <img class="renault-small-icon" src="~/App_Images/renault-duster-small-icon.jpg" alt="Duster-small-icon" />
+                            }
+                            @if (item.Id == 3)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-A-7-small-icon.png" alt="A7-small-icon" />
+                            }
+                            @if (item.Id == 4)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-Q-7-small-icon.png" alt="Q7-small-icon" />
+                            }
+                            @if (item.Id == 5)
+                            {
+                                <img class="renault-small-icon" src="~/App_Images/renault-kadjar-small-icon.jpg" alt="kadjar-small-icon" />
+                            }
+                            @if (item.Id == 6)
+                            {
+                                <img class="renault-small-icon" src="~/App_Images/renault-koleos-small-icon.jpg" alt="koleos-small-icon" />
+                            }
+                            @if (item.Id == 7)
+                            {
+                                <img class="renault-small-icon" src="~/App_Images/renault-logan-small-icon.jpg" alt="logan-small-icon" />
+                            }
+                            @if (item.Id == 8)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-A-8-small-icon.png" alt="A8-small-icon" />
+                            }
+                            @if (item.Id == 9)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-A-6-small-icon.png" alt="A6-small-icon" />
+                            }
+                            @if (item.Id == 10)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-Q-8-small-icon.png" alt="Q8-small-icon" />
+                            }
+                            @if (item.Id == 11)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-Q-5-small-icon.png" alt="Q5-small-icon" />
+                            }
+                            @if (item.Id == 12)
+                            {
+                                <img class="renault-small-icon" src="~/App_Images/renault-loganmvc-small-icon.jpg" alt="loganmcv-small-icon" />
+                            }
+                            @if (item.Id == 13)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-Q-3-small-icon.png" alt="Q3-small-icon" />
+                            }
+                            @if (item.Id == 14)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-Q-2-small-icon.png" alt="Q2-small-icon" />
+                            }
+                        </a>
                     </td>
                 </tr>
             }
