--- a/CarStore/Views/Config/Details.cshtml
+++ b/CarStore/Views/Config/Details.cshtml
@@ -154,6 +154,42 @@
             {
                 <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-5-cfg-premium.png" alt="config q5 premiumimg" />
             }
+            @if (Model.Id == 40)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmvc-cfg-base.jpg" alt="config loganmvc base img" />
+            }
+            @if (Model.Id == 41)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmvc-cfg-zen.jpg" alt="config loganmvc zen img" />
+            }
+            @if (Model.Id == 42)
+            {
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmvc-cfg-stepwat-zen.jpg" alt="config loganmvc stepway zen img" />
+            }
+            @if (Model.Id == 43)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-3-cfg-base.png" alt="config q3 base img" />
+            }
+            @if (Model.Id == 44)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-3-cfg-comfort.png" alt="config q3 comfort img" />
+            }
+            @if (Model.Id == 45)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-3-cfg-premium.png" alt="config q3 premium img" />
+            }
+            @if (Model.Id == 46)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-2-cfg-base.png" alt="config q2 base img" />
+            }
+            @if (Model.Id == 47)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-2-cfg-comfort.png" alt="config q2 comfort img" />
+            }
+            @if (Model.Id == 48)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-2-cfg-premium.png" alt="config q2 premium img" />
+            }
 
             <dl>
                 <dt>
