--- a/CarStore/Views/CarType/Index.cshtml
+++ b/CarStore/Views/CarType/Index.cshtml
@@ -25,18 +25,20 @@
             <tr class="tr-type">
 
                 <td class="td-type">
-                    @if (item.Id == 1)
-                    {
-                        <img src="~/App_Images/sedans-small-img.jpg" alt="Sedans-img" />
-                    }
-                    @if (item.Id == 2)
-                    {
-                        <img src="~/App_Images/crossowers-small-img.jpg" alt="Crossovers-img" />
-                    }
-                    @if (item.Id == 3)
-                    {
-                        <img src="~/App_Images/comercial-small-img.jpg" alt="Commercial-img" />
-                    }
+                    <a href="/PurchaseBuild/CarTypeChoose/@item.Id">
+                        @if (item.Id == 1)
+                        {
+                            <img src="~/App_Images/sedans-small-img.jpg" alt="Sedans-img" />
+                        }
+                        @if (item.Id == 2)
+                        {
+                            <img src="~/App_Images/crossowers-small-img.jpg" alt="Crossovers-img" />
+                        }
+                        @if (item.Id == 3)
+                        {
+                            <img src="~/App_Images/comercial-small-img.jpg" alt="Commercial-img" />
+                        }
+                    </a>
                 </td>
 
                 <td class="td-type">
