--- a/CarStore/Views/CarModel/Details.cshtml
+++ b/CarStore/Views/CarModel/Details.cshtml
@@ -721,7 +721,7 @@
     }
 
     @*//////////////
-        RENAULT LOGAN MVC
+        RENAULT LOGAN MCV
         //////////////*@
 
     @if (Model.Id == 12)
@@ -734,12 +734,12 @@
         </div>
 
         <br>
-        <img class="img-renault-wide" src="~/App_Images/renault-loganmvc-view-1.jpg" alt="loganmvc view" />
+        <img class="img-renault-wide" src="~/App_Images/renault-loganmcv-view-1.jpg" alt="loganmcv view" />
 
         <hr />
         <div>
             <h2>Interior design</h2>
-            <img class="img-renault-wide" src="~/App_Images/renault-loganmvc-inside-1.jpg" alt="loganmvc inside 1" />
+            <img class="img-renault-wide" src="~/App_Images/renault-loganmcv-inside-1.jpg" alt="loganmcv inside 1" />
             <hr />
 
             <div class="div-text">
@@ -757,7 +757,7 @@
             </div>
 
             <hr />
-            <img class="img-renault" src="~/App_Images/renault-loganmvc-inside-2.jpg" alt="loganmvc inside 2" />
+            <img class="img-renault" src="~/App_Images/renault-loganmcv-inside-2.jpg" alt="loganmcv inside 2" />
         </div>
 
         <hr />
@@ -766,15 +766,15 @@
         <div class="div-cfg">
             <span class="span">1/3</span>
             <a href="/Config/Details/40">
-                <img class="renault-config-img" src="~/App_Images/renault-loganmvc-cfg-base.jpg" alt="loganmvc-configs-base-img" />
+                <img class="renault-config-img" src="~/App_Images/renault-loganmcv-cfg-base.jpg" alt="loganmcv-configs-base-img" />
             </a>
             <span class="span">2/3</span>
             <a href="/Config/Details/41">
-                <img class="renault-config-img" src="~/App_Images/renault-loganmvc-cfg-zen.jpg" alt="logan-configs-zen-img" />
+                <img class="renault-config-img" src="~/App_Images/renault-loganmcv-cfg-zen.jpg" alt="loganmcv-configs-zen-img" />
             </a>
             <span class="span">3/3</span>
             <a href="/Config/Details/42">
-                <img class="renault-config-img" src="~/App_Images/renault-loganmvc-cfg-stepwat-zen.jpg" alt="logan-configs-stepway-zen-img" />
+                <img class="renault-config-img" src="~/App_Images/renault-loganmcv-cfg-stepwat-zen.jpg" alt="loganmcv-configs-stepway-zen-img" />
             </a>
         </div>
         <hr />
@@ -851,16 +851,16 @@
     @*/////////////*@
     @if (Model.Id == 14)
     {
-<div class="div-text">
-    Start price from $28 800
-    <br />
-    Meet: New Audi Q2 on stage.
-    The completely new geometry of the design clearly demonstrates the distinctive character,
-    which is hidden behind clearly defined lines and expressive faces. At the heart of the car's 
-    showy self-confidence are its extraordinary capabilities thanks to the powerful TFSI 
-    and TDI units with an output of 150 to 190 hp. and quattro all-wheel drive (optional).
-    
-</div>
+        <div class="div-text">
+            Start price from $28 800
+            <br />
+            Meet: New Audi Q2 on stage.
+            The completely new geometry of the design clearly demonstrates the distinctive character,
+            which is hidden behind clearly defined lines and expressive faces. At the heart of the car's
+            showy self-confidence are its extraordinary capabilities thanks to the powerful TFSI
+            and TDI units with an output of 150 to 190 hp. and quattro all-wheel drive (optional).
+
+        </div>
 
         <br />
         <img class="img-audi-wide" src="~/App_Images/audi-Q-2-view-1.jpg" alt="Q2-view-1" />
@@ -883,7 +883,7 @@
             <div class="div-text">
                 The car interior is surprisingly practical.
                 An optional boot with a power tailgate and a three-section rear
-                seatback make it possible to choose from numerous interior configurations. 
+                seatback make it possible to choose from numerous interior configurations.
                 Thanks to a wide choice of spectacular colors of a seat upholstery and
                 stylish decorative inserts the interior can be decorated to your liking.
             </div>
@@ -906,6 +906,84 @@
             <span class="span">3/3</span>
             <a href="/Config/Details/48">
                 <img class="audi-config-img" src="~/App_Images/audi-Q-2-cfg-premium.png" alt="Q2-configs-premium-img" />
+            </a>
+            <hr />
+        </div>
+    }
+
+    @*AUDI A4*@
+    @*/////////////*@
+
+    @if (Model.Id == 15)
+    {
+<div class="div-text">
+    Start price from $36 080
+    <br />
+    Thanks to the new design and almost completely updated body,
+    the Audi A4 sports features have become even more expressive:
+    in its appearance the dynamics and power are combined with the aesthetics that appeal.
+    The high-quality and high-tech interior, the latest technologies in digital equipment,
+    the Infotainment infotainment and command and assistance systems harmoniously complement
+    the overall impression.
+</div>
+
+        <br />
+        <img class="img-audi-wide" src="~/App_Images/audi-A-4-view-1.jpg" alt="A4-view-1" />
+
+        <div>
+            <hr />
+            <div class="div-text">
+                The Audi A4 Limousine is the embodiment of sportiness, emotion and prestige. 
+                This is noticeable in every detail:
+                in the dynamic body elements that indicate the use of the quattro drive,
+                and in harmonious proportions. The solid chrome trim combines
+                the LED taillights and clearly emphasizes the horizontal lines of the body. 
+                A relief diffuser with built-in trapezoidal tailpipes gives a sporty look to the rear.
+                On the side, the Audi A4 Limousine sports body lines are extended by wide wings and clear sills. 
+                A large selection of wheels, partly as an option, is available in sizes from 16 to 19 inches.
+                The wide recessed grille of the Singleframe radiator,
+                the front bumper and framed wide air intakes emphasize the integrity and power of the front.
+
+            </div>
+            <br>
+            <img class="img-audi" src="~/App_Images/audi-A-4-view-2.jpg" alt="A4-view-2" />
+        </div>
+
+        <div>
+            <hr />
+            <h2>Interior design</h2>
+
+            <div class="div-text">
+                The Audi A4 Limousine offers plenty of space,
+                and the interior features emphasize its lightness and width thanks to its thoughtful layout.
+                For example, the continuous tape ventilation openings emphasize the width of the car,
+                and the chrome lining above them successfully accents.
+                The large storage compartment in the center console is very convenient.
+                Standard interior lighting includes a reading lamp with touch-adjustable brightness.
+                An optional backlight package creates an even more cozy atmosphere in the cabin.
+                A feature of the Audi A4 Limousine is our modular line concept. 
+                Thanks to it, the configuration of the car has become more flexible - 
+                you can now combine different design packages for the interior and exterior.
+            </div>
+            <br />
+            <img class="img-audi" src="~/App_Images/audi-A-4-inside-1.jpeg" alt="A4-inside-1" />
+        </div>
+
+        <hr />
+        <h2>Configurations</h2>
+
+        <div class="div-cfg">
+            <span class="span">1/3</span>
+            <a href="/Config/Details/49">
+                <img class="audi-config-img" src="~/App_Images/audi-A-4-cfg-base.png" alt="A4-configs-base-img" />
+            </a>
+            <span class="span">2/3</span>
+            <a href="/Config/Details/50">
+                <img class="audi-config-img" src="~/App_Images/audi-A-4-cfg-comfort.png" alt="A4-configs-comfort-img" />
+            </a>
+            <span class="span">3/3</span>
+            <a href="/Config/Details/51">
+                <img class="audi-config-img" src="~/App_Images/audi-A-4-cfg-premium.png" alt="A4-configs-premium-img" />
             </a>
             <hr />
         </div>
