--- a/CarStore/Views/CarModel/Index.cshtml
+++ b/CarStore/Views/CarModel/Index.cshtml
@@ -83,7 +83,7 @@
                             }
                             @if (item.Id == 12)
                             {
-                                <img class="renault-small-icon" src="~/App_Images/renault-loganmvc-small-icon.jpg" alt="loganmcv-small-icon" />
+                                <img class="renault-small-icon" src="~/App_Images/renault-loganmcv-small-icon.jpg" alt="loganmcv-small-icon" />
                             }
                             @if (item.Id == 13)
                             {
@@ -92,6 +92,10 @@
                             @if (item.Id == 14)
                             {
                                 <img class="audi-small-icon" src="~/App_Images/audi-Q-2-small-icon.png" alt="Q2-small-icon" />
+                            }
+                            @if (item.Id == 15)
+                            {
+                                <img class="audi-small-icon" src="~/App_Images/audi-A-4-small-icon.png" alt="A4-small-icon" />
                             }
                         </a>
                     </td>
