--- a/CarStore/Views/Config/Details.cshtml
+++ b/CarStore/Views/Config/Details.cshtml
@@ -156,15 +156,15 @@
             }
             @if (Model.Id == 40)
             {
-                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmvc-cfg-base.jpg" alt="config loganmvc base img" />
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmcv-cfg-base.jpg" alt="config loganmcv base img" />
             }
             @if (Model.Id == 41)
             {
-                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmvc-cfg-zen.jpg" alt="config loganmvc zen img" />
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmcv-cfg-zen.jpg" alt="config loganmcv zen img" />
             }
             @if (Model.Id == 42)
             {
-                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmvc-cfg-stepwat-zen.jpg" alt="config loganmvc stepway zen img" />
+                <img class="img-cfg-det-renault" src="~/App_Images/renault-loganmcv-cfg-stepwat-zen.jpg" alt="config loganmcv stepway zen img" />
             }
             @if (Model.Id == 43)
             {
@@ -189,6 +189,18 @@
             @if (Model.Id == 48)
             {
                 <img class="img-cfg-det-audi" src="~/App_Images/audi-Q-2-cfg-premium.png" alt="config q2 premium img" />
+            }
+            @if (Model.Id == 49)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-4-cfg-base.png" alt="config a4 base img" />
+            }
+            @if (Model.Id == 50)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-4-cfg-comfort.png" alt="config a4 comfort img" />
+            }
+            @if (Model.Id == 51)
+            {
+                <img class="img-cfg-det-audi" src="~/App_Images/audi-A-4-cfg-premium.png" alt="config a4 premium img" />
             }
 
             <dl>
